--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
     "node-cron": "^4.2.1",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "typescript": "^5.8.3",
     "whatsapp-web.js": "^1.31.0",
