--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
+    "@types/qrcode": "^1.5.5",
     "@types/qrcode-terminal": "^0.12.2",
     "ts-node": "^10.9.2"
   }
