--- a/discloud.config
+++ b/discloud.config
@@ -5,6 +5,6 @@ MAIN=dist/index.js
 RAM=100
 AUTORESTART=false
 VERSION=latest
-APT=tools
+APT=chromium-browser libx11-xcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxi6 libxtst6 libnss3 libnspr4 libasound2 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdbus-1-3 libdrm2 libgbm1 libgtk-3-0
 START=npm start
 BUILD=npm run build
