--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "qrcode-terminal": "^0.12.0",
     "typescript": "^5.8.3",
     "whatsapp-web.js": "^1.31.0",
-    "zod": "^4.0.14"
+    "zod": "^4.0.14",
+    "puppeteer": "^21.0.0"
   },
   "devDependencies": {
     "@types/qrcode": "^1.5.5",
