--- a/package.json
+++ b/package.json
@@ -17,17 +17,20 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
+    "fluent-ffmpeg": "^2.1.3",
     "node-cron": "^4.2.1",
+    "puppeteer": "^23.5.3",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "typescript": "^5.8.3",
     "whatsapp-web.js": "^1.31.0",
-    "zod": "^4.0.14",
-    "puppeteer": "^21.0.0"
+    "zod": "^4.0.14"
+  },
+  "resolutions": {
+    "rimraf": "^5.0.0",
+    "glob": "^11.0.0"
   },
   "devDependencies": {
-    "@types/qrcode": "^1.5.5",
-    "@types/qrcode-terminal": "^0.12.2",
-    "ts-node": "^10.9.2"
+    "@types/qrcode": "^1.5.5"
   }
 }
