feat: Adjust discloud.config based on resolution.txt and add resolution.txt

--- a/discloud.config
+++ b/discloud.config
@@ -1,10 +1,9 @@
 NAME=TobiasBOT
 AVATAR=https://i.imgur.com/bWhx7OT.png
-TYPE=bot
+TYPE=site
 MAIN=dist/index.js
-RAM=100
-AUTORESTART=false
+RAM=1024
+AUTORESTART=true
 VERSION=latest
-APT=chromium-browser libx11-xcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxi6 libxtst6 libnss3 libnspr4 libasound2 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdbus-1-3 libdrm2 libgbm1 libgtk-3-0
+APT=chromium-browser libx11-xcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxi6 libxtst6 libnss3 libnspr4 libasound2 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdbus-1-3 libdrm2 libgbm1 libgtk-3-0 libgobject-2.0-0 libpango-1.0-0 libcairo2 libglib2.0-0 libxss1 libxrandr2 libfontconfig1 libfreetype6 libgdk-pixbuf-2.0-0 libatk-adaptor libxkbcommon0 libpangocairo-1.0-0 libpangoft2-1.0-0
 START=npm start
-BUILD=npm run build
